@@ -10,16 +10,16 @@ import org.springframework.core.io.UrlResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashSet;
+import java.util.List;
+import java.util.stream.Stream;
 
 @Service
 public class ImageService implements IImageService {
@@ -34,48 +34,39 @@ public class ImageService implements IImageService {
 
     @Override
     public Resource getUserImage(int userId) throws IOException {
-        String imagePath = userImagesPath+userId+".jpg";
-        Resource resource = resourceLoader.getResource("classpath:"+imagePath);
-        if(Files.exists(Path.of(resource.getURI())))
-            return resource;
-        else
-            throw new IOException();
+        Path filePath = Paths.get(userImagesPath, userId + ".jpg");
+        if (!Files.exists(filePath)) {
+            throw new FileNotFoundException("User image not found for user ID: " + userId);
+        }
+        return new UrlResource(filePath.toUri());
     }
 
     @Override
     public Resource getEventImage(int eventId, String imageName) throws IOException {
-        Resource resource = resourceLoader.getResource("classpath:"+eventImagesPath+eventId+"/"+imageName);
-        if(Files.exists(Path.of(resource.getURI())))
-            return resource;
-        else
-            throw new IOException();
+        Path filePath = Paths.get(eventImagesPath, eventId + "/" + imageName );
+        if (!Files.exists(filePath)) {
+            throw new FileNotFoundException("Event image not found for event ID: " + eventId + ", Image name: " + imageName);
+        }
+        return new UrlResource(filePath.toUri());
     }
 
     @Override
     public Collection<String> getEventImagesNames(int eventId) throws IOException {
-        String imagePath = eventImagesPath + eventId ;
-        Resource resource = resourceLoader.getResource("classpath:"+imagePath);
-        Collection<String> immagini = new ArrayList<>();
-
-        File directory = new File(resource.getURI());
-
-        if (directory.exists() && directory.isDirectory()) {
-            File[] files = directory.listFiles();
-
-            if (files != null) {
-                for (File file : files) {
-                    immagini.add(file.getName());
+        Path eventDir = Paths.get(eventImagesPath, String.valueOf(eventId));
+        if (!Files.exists(eventDir) || !Files.isDirectory(eventDir)) {
+            throw new FileNotFoundException("Event directory not found for event ID: " + eventId);
+        }
+        Collection<String> imageNames = new HashSet<>();
+        File folder = eventDir.toFile();
+        File[] files = folder.listFiles();
+        if (files != null) {
+            for (File file : files) {
+                if (file.isFile()) {
+                    imageNames.add(file.getName());
                 }
             }
-            return immagini;
-        } else {
-            throw new IOException("La cartella dell'evento non esiste o è vuota");
         }
-    }
-
-    @Override
-    public void addUserImage(int userId, MultipartFile image) throws IOException {
-
+        return imageNames;
     }
 
     @Override
@@ -88,5 +79,16 @@ public class ImageService implements IImageService {
         System.out.println(filePath.toAbsolutePath());
         Files.copy(image.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
     }
+
+    @Override
+    public void addUserImage(int userId, MultipartFile image) throws IOException {
+        Path userDir = Paths.get(userImagesPath);
+        if (!Files.exists(userDir)) {
+            Files.createDirectories(userDir);
+        }
+        Path filePath = userDir.resolve(userId + ".jpg");
+        Files.copy(image.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+    }
+
 
 }
